# Yuto_app7

./: .gitignore  README.md
coordinator_agent/: .env.sample  README.md  config.py  coordinator_agent.py  pyproject.toml  remote_agent_connection.py  ui.py
coordinator_agent_with_midokoro/: .env.sample  README.md  config.py  coordinator_agent.py  pyproject.toml  ui.py
midokoro_agent/: README.md  __main__.py  adk_agent_executor.py  config.py  midokoro_agent.py  pyproject.toml  test_client.py
uchina_guchi_agent/: .env.sample  README.md  __main__.py  pyproject.toml  test_client.py  uchina_guchi_agent.py
